Bug #20103: Escaping with backslash does not work  - make the client to respect the server-side    no_backslash_escapes option and disable the    special meaning of backslash also at client side.